# testbench-release-please-python

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  dump.txt  pyproject.toml
.github/workflows/: codeql.yaml  primary.yaml  primary_yaml  release-please.yaml  release-testpypi.yaml  tests-and-checks.yaml
docs-internal/: faq.md  please-release.md  poetry.md
docs-internal/assets/vscode-settings/: settings.json
docs/devel/assets/vscode-settings/: extensions.json
scripts/: base.sh  shellcheck.sh  shfmt.sh  test.sh  uvicorn.sh
src/testbench_tuna/: main.py  utils.py
tests/: test_main.py  test_utils.py
