[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "testbench-tuna"
version = "0.1.3"
description = ""
authors = ["Tim Schwenke <tim.schwenke@trallnag.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
pre-commit = "^2.20.0"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
