[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "testbench-tuna"
version = "0.2.2"
description = "Personal testbench for trying out stuff"
authors = ["Tim Schwenke <tim.schwenke@trallnag.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/trallnag/testbench-tuna"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = ">=0.78,<0.80"
requests = "^2.28.1"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
